titulos y banner dinámicos

--- a/documentación.html
+++ b/documentación.html
@@ -56,6 +56,36 @@
                     mientras que el evento blur ocurre cuando el elemento pierde el enfoque.
                 </p>
             </div>
+            <div>Manipular elementos
+                <div>getAttribute
+                    <p>se usa para obtener el valor de un atributo específico de un elemento HTML.
+                        Toma un argumento, que es el nombre del atributo del cual queremos recuperar
+                        el valor.
+                    </p>
+                </div>
+                <div>setAttribute
+                    <p>
+                        se utiliza para definir o modificar el valor de un atributo en un elemento HTML.
+                        Acepta dos argumentos: el primero es el nombre del atributo que queremos definir
+                        o modificar, y el segundo es el valor que queremos asignar a ese atributo.
+                        Si el atributo ya existe, el método setAttributelo sobrescribirá; de lo contrario,
+                        creará un nuevo atributo.
+                    </p>
+                </div>
+                <div>hasAttribute 
+                    <p>
+                        El método hasAttribute se utiliza para verificar si un elemento tiene un atributo
+                        específico. Toma un argumento, que es el nombre del atributo que queremos verificar.
+                        El método devolverá true si el atributo existe y false si el atributo no está presente. 
+                    </p>
+                </div>
+                <div>removeAttribute
+                    <p>
+                        se usa para eliminar un atributo específico de un elemento HTML.
+                        Toma un argumento, que es el nombre del atributo que queremos eliminar.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
