Creando y reproduciendo audio

--- a/documentación.html
+++ b/documentación.html
@@ -86,6 +86,60 @@
                     </p>
                 </div>
             </div>
+            <div>classList
+                <p>es una propiedad de JavaScript que representa una lista de clases CSS.
+                    Proporciona métodos que facilitan la adición, eliminación y verificación de clases,
+                    haciendo que la manipulación de clases CSS sea más eficiente y menos propensa a errores
+                    de programación.
+                </p>
+            </div>
+            <div>Remove
+                <p>Para quitar una clase de un elemento HTML,
+                    podemos utilizar el método remove() de classList.
+                    Este método toma el nombre de la clase como argumento y elimina la clase del elemento,
+                    si está presente
+                </p>
+            </div>
+            <div>El método toggle()
+                <p> permite alternar una clase en un elemento.
+                    Si la clase ya está presente en el elemento,
+                    el método la quita; de lo contrario, la agrega
+                </p>
+            </div>
+            <div>contains()
+                <p> Para verificar si una clase específica está asociada a un elemento,
+                    podemos usar el método contains()
+                </p>
+            </div>
+            <div>Evento change
+                <p>se usa para los inputs como checks o radios o select</p>
+            </div>
+            <div>click
+                <p>Para botones (detección de evetno)</p>
+            </div>
+            <div>Audio
+                <p>
+                    El objeto 'Audio' es parte de HTML5 y proporciona una interfaz fácil y poderosa
+                    para reproducir y controlar archivos de audio en tiempo real.
+                </p>
+                <div>Controles básicos de audio
+                    <div>play()
+                        <p>inicia la reproducción del audio.</p>
+                    </div>
+                    <div>pause
+                        <p>pausa la reproducción del audio.</p>
+                    </div>
+                    <div>currentTime
+                        <p>propiedad que devuelve o establece la posición actual de reproducción del audio, en segundos.</p>
+                    </div>
+                    <div>volume
+                        <p>propiedad que devuelve o establece el nivel de volumen del audio, variando de 0 a 1.</p>
+                    </div>
+                    <div>loop
+                        <p>propiedad que repite la reproducción del audio pniendo como true el valor de esta propiedad.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
