creación de temporizador con setInterval y detención con clearInterval

--- a/documentación.html
+++ b/documentación.html
@@ -142,5 +142,30 @@
             </div>
         </div>
     </div>
+    <div>Construcción de un temporizador
+        <div>
+
+        </div>
+    </div>
+    <div>Porpiedad Nodo
+        <div>parentNode
+            <p>se utiliza para acceder al nodo padre de un elemento en el DOM. A través de ella,
+                podemos navegar por el árbol del DOM hacia el nodo padre del elemento actual.
+            </p>
+        </div>
+        <div>childNodes 
+            <p>se utiliza para acceder a todos los nodos hijos de un elemento en el DOM.
+                Retorna una lista de nodos, incluyendo nodos de texto y elementos HTML.
+            </p>
+        </div>
+        <div>nextElementSibling 
+            <p>permite acceder al siguiente hermano (nodo adyacente) de un elemento en el DOM.</p>
+        </div>
+        <div>previousElementSibling 
+            <p>similar a nextElementSibling , pero permite acceder al hermano anterior
+                (nodo adyacente) de un elemento en el DOM.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
