explicación de set y clear Interval

--- a/documentación.html
+++ b/documentación.html
@@ -167,5 +167,13 @@
             </p>
         </div>
     </div>
+    <div>Interval
+        <div>setInterval()
+            <p>Es un método que recibe dos parámetros, la función a jecutar y el tiempo en milisegundos para volver a ejecutar</p>
+        </div>
+        <div>clearInterval()
+            <p>recibe una variable que almacena el setInterval para detenerla automáticamente</p>
+        </div>
+    </div>
 </body>
 </html>
